--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -37,3 +37,6 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
+server.port = 8090
+#server.address=
+
