Alteração no application.properties -Adiciona configuração para não retornar campos nulos nos DTOs de resposta.

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -40,3 +40,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 server.port = 8090
 #server.address=
 
+# Esta configuração define que quando houver campo nulo em um DTO de retorno, este campo será
+# omitido da resposta.
+spring.jackson.default-property-inclusion=NON_NULL
+
